RESOLVED FIXED 114666
[Mac] Web Inspector does not switch dock sides properly
https://bugs.webkit.org/show_bug.cgi?id=114666
Summary [Mac] Web Inspector does not switch dock sides properly
Timothy Hatcher
Reported 2013-04-15 23:42:24 PDT
In a recent Safari change dick side switching broke. We need to be more vigilant in the frames we create for our views. <rdar://problem/13660796>
Attachments
Patch (3.26 KB, patch)
2013-04-15 23:49 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2013-04-15 23:49:29 PDT
WebKit Commit Bot
Comment 2 2013-04-16 11:06:57 PDT
Comment on attachment 198268 [details] Patch Clearing flags on attachment: 198268 Committed r148524: <http://trac.webkit.org/changeset/148524>
WebKit Commit Bot
Comment 3 2013-04-16 11:07:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.