Create full rects for the inspector and inspected views when adjusting to an inspected view frame change.

This ensures switching dock sides restores the inspected view
and inspector to fill the parent's bounds.

https://webkit.org/b/114666
rdar://problem/13660796

Reviewed by Joseph Pecoraro.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):


Canonical link: https://commits.webkit.org/133061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148524 268f45cc-cd09-0410-ab3c-d52691b4dbfc